--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: My Blog
+title: My
 SEOTitle: 我的博客 | My Blog
 header-img: img/post-bg.jpg
 email: mrzhang1515@gmail.com
@@ -63,8 +63,8 @@ gitalk:
   clientID:                             #生成的clientID
   clientSecret:     #生成的clientSecret
   repo: cohaesio.github.io    #仓库名称
-  owner:     #github用户名
-  admin: 
+  owner: cohaesio    #github用户名
+  admin:
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
 
 
@@ -72,7 +72,7 @@ gitalk:
 
 # Analytics settings
 # Baidu Analytics
-ba_track_id: 
+ba_track_id:
 # Google Analytics
 ga_track_id:             # Format: UA-xxxxxx-xx
 ga_domain:                # 默认的是 auto, 这里我是自定义了的域名，你如果没有自己的域名，需要改成auto
@@ -95,17 +95,4 @@ service-worker: true
 
 # Friends
 friends: [
-    {
-        title: "WP",
-        href: "https://wangpei.ink"
-    },{
-        title: "简书·BY",
-        href: "http://www.jianshu.com/u/e71990ada2fd"
-    },{
-        title: "Apple",
-        href: "https://apple.com"
-    },{
-        title: "Apple Developer",
-        href: "https://developer.apple.com/"
-    }
 ]
