--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ ga_domain:                # 默认的是 auto, 这里我是自定义了的域名
 
 
 # Featured Tags
-featured-tags: true                     # 是否使用首页标签
+featured-tags: false                     # 是否使用首页标签
 featured-condition-size: 1              # 相同标签数量大于这个数，才会出现在首页
 
 
@@ -94,5 +94,5 @@ service-worker: true
 
 
 # Friends
-friends: [
-]
+# friends: [
+# ]
